k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estetica-web-ingress
  namespace: dra-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "draanapaulasou.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: estetica-web-service
            port:
              number: 80
  tls:
  - hosts:
    - "draanapaulasou.com"
    secretName: draanapaula-tls
